Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29331

compiling error with included boost header <boost/uuid/random_generator.hpp>

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 Beta
    • 5.0.0, 5.0.1, 5.0.2, 5.1.0 , 5.1.1, 5.2.0, 5.2.1, 5.3.0, 5.3.1
    • Build tools: moc
    • windows 7
      msvc2010
      boost 1_50_0
      boost 1_52_0

      compiling error with included boost header #include <boost/uuid/random_generator.hpp> in qt-header file with Q_OBJECT-macro

      error: boost/mpl/if.hpp(131): Error: Macro argument mismatch.

        1. boost_error.bat
          2 kB
        2. main.cpp
          0.1 kB
        3. mocbugboost.cpp
          0.1 kB
        4. mocbugboost.hpp
          0.3 kB
        5. qtbug29331_diag.patch
          2 kB
        6. qtbug29331.tar
          10 kB
        7. reproduce_boost_issue.tar.bz2
          5.76 MB
        8. TestProject.pro
          0.3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            jakra Jan Krause
            Votes:
            23 Vote for this issue
            Watchers:
            23 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes